--- a/xethuongmai.html
+++ b/xethuongmai.html
@@ -106,7 +106,7 @@
 
         <!-- Container -->
         <div class="container">
-            <div class="xe-main__background" style="background-image: url(./assets/img/xeso-main_background.jpg);"></div>
+            <div class="xe-main__background" style="background-image: url(./assets/img/xethuongmai-main_background.jpeg);"></div>
             <div class="grid">
                 <div class="grid__row">
                     <div class="grid__column-3">
@@ -116,43 +116,25 @@
                             <option value="">Giá từ cao đến thấp</option>
                         </select>
                         <div class="xe__label">
-                            <span class="xe__label-text">Hãng xe</span>
+                            <span class="xe__label-text">Nhiên liệu</span>
                         </div>
                         <div class="xe__wrap">
                             <div class="xe__wrap-item">
-                                <label for="suzuki" class="xe__wrap-labbel">
-                                    <input type="checkbox" class="checkbox" id="suzuki">
-                                    Suzuki
+                                <label for="xang" class="xe__wrap-labbel">
+                                    <input type="checkbox" class="checkbox" id="xang">
+                                    Xăng
                                 </label>
                             </div>
                             <div class="xe__wrap-item">
-                                <label for="honda" class="xe__wrap-labbel">
-                                    <input type="checkbox" class="checkbox" id="honda">
-                                    Honda
+                                <label for="dau" class="xe__wrap-labbel">
+                                    <input type="checkbox" class="checkbox" id="dau">
+                                    Dầu
                                 </label>
                             </div>
                             <div class="xe__wrap-item">
-                                <label for="yamaha" class="xe__wrap-labbel">
-                                    <input type="checkbox" class="checkbox" id="yamaha">
-                                    Yamaha
-                                </label>
-                            </div>
-                            <div class="xe__wrap-item">
-                                <label for="gpx" class="xe__wrap-labbel">
-                                    <input type="checkbox" class="checkbox" id="gpx">
-                                    GPX
-                                </label>
-                            </div>
-                            <div class="xe__wrap-item">
-                                <label for="gpx" class="xe__wrap-labbel">
-                                    <input type="checkbox" class="checkbox" id="tvs">
-                                    TVS
-                                </label>
-                            </div>
-                            <div class="xe__wrap-item">
-                                <label for="zonten" class="xe__wrap-labbel">
-                                    <input type="checkbox" class="checkbox" id="zonten">
-                                    Zonten
+                                <label for="hybird" class="xe__wrap-labbel">
+                                    <input type="checkbox" class="checkbox" id="hybird">
+                                    Động cơ Hybird
                                 </label>
                             </div>
                             <!-- Price -->
@@ -161,39 +143,39 @@
                             </div>
                             <div class="xe__wrap">
                                 <div class="xe__wrap-item">
-                                    <label for="20m" class="xe__wrap-labbel">
-                                        <input type="checkbox" class="checkbox" id="20m">
-                                        0 - 20.000.000
+                                    <label for="200m" class="xe__wrap-labbel">
+                                        <input type="checkbox" class="checkbox" id="200m">
+                                        Dưới 200.000.000
                                     </label>
                                 </div>
                                 <div class="xe__wrap-item">
-                                    <label for="30-40m" class="xe__wrap-labbel">
-                                        <input type="checkbox" class="checkbox" id="30-40m">
-                                        30.000.000 - 40.000.000
+                                    <label for="300m" class="xe__wrap-labbel">
+                                        <input type="checkbox" class="checkbox" id="300m">
+                                        200.000.000 - 300.000.000
                                     </label>
                                 </div>
                                 <div class="xe__wrap-item">
-                                    <label for="40-50m" class="xe__wrap-labbel">
-                                        <input type="checkbox" class="checkbox" id="40-50m">
-                                        40.000.000 - 50.000.000
+                                    <label for="400m" class="xe__wrap-labbel">
+                                        <input type="checkbox" class="checkbox" id="400m">
+                                        300.000.000 - 400.000.000
                                     </label>
                                 </div>
                                 <div class="xe__wrap-item">
-                                    <label for="50-70m" class="xe__wrap-labbel">
-                                        <input type="checkbox" class="checkbox" id="50-70m">
-                                        50.000.000 - 70.000.000
+                                    <label for="500m" class="xe__wrap-labbel">
+                                        <input type="checkbox" class="checkbox" id="500m">
+                                        400.000.000 - 500.000.000
                                     </label>
                                 </div>
                                 <div class="xe__wrap-item">
-                                    <label for="70-100m" class="xe__wrap-labbel">
-                                        <input type="checkbox" class="checkbox" id="70-100m">
-                                        70.000.000 - 100.000.000
+                                    <label for="600m" class="xe__wrap-labbel">
+                                        <input type="checkbox" class="checkbox" id="600m">
+                                        500.000.000 - 600.000.000
                                     </label>
                                 </div>
                                 <div class="xe__wrap-item">
-                                    <label for="100m" class="xe__wrap-labbel">
-                                        <input type="checkbox" class="checkbox" id="100m">
-                                        > 100.000.000
+                                    <label for=">600m" class="xe__wrap-labbel">
+                                        <input type="checkbox" class="checkbox" id=">600m">
+                                        Trên 600.000.000
                                     </label>
                                 </div>
                             </div>
@@ -217,7 +199,7 @@
                                     <label for="" class="product-label">Từ GPX Thái Lan</label>
                                     <div class="product-type">
                                         <span>Loại xe: </span>
-                                        <a href="xeso.html" class="product-type__link">xe số</a>
+                                        <a href="xethuongmai.html" class="product-type__link">xe thương mại</a>
                                     </div>
                                 </div>
                             </div>
@@ -287,6 +269,5 @@
     });
         </script>
     </div>
-
 </body>
 </html>
