--- a/xecon.html
+++ b/xecon.html
@@ -106,7 +106,7 @@
 
         <!-- Container -->
         <div class="container">
-            <div class="xe-main__background" style="background-image: url(./assets/img/xeso-main_background.jpg);"></div>
+            <div class="xe-main__background" style="background-image: url(./assets/img/xecon-main_background.pjg.webp);"></div>
             <div class="grid">
                 <div class="grid__row">
                     <div class="grid__column-3">
@@ -138,62 +138,86 @@
                                 </label>
                             </div>
                             <div class="xe__wrap-item">
-                                <label for="gpx" class="xe__wrap-labbel">
-                                    <input type="checkbox" class="checkbox" id="gpx">
-                                    GPX
+                                <label for="kawasaki" class="xe__wrap-labbel">
+                                    <input type="checkbox" class="checkbox" id="kawasaki">
+                                    Kawasaki
                                 </label>
                             </div>
                             <div class="xe__wrap-item">
-                                <label for="gpx" class="xe__wrap-labbel">
-                                    <input type="checkbox" class="checkbox" id="tvs">
-                                    TVS
+                                <label for="Ducati" class="xe__wrap-labbel">
+                                    <input type="checkbox" class="checkbox" id="Ducati">
+                                    Ducati
                                 </label>
                             </div>
                             <div class="xe__wrap-item">
-                                <label for="zonten" class="xe__wrap-labbel">
-                                    <input type="checkbox" class="checkbox" id="zonten">
-                                    Zonten
+                                <label for="ktm" class="xe__wrap-labbel">
+                                    <input type="checkbox" class="checkbox" id="ktm">
+                                    KTM
                                 </label>
                             </div>
+                            <!-- Engine -->
+                            <div class="xe__label">
+                                <span class="xe__label-text">Dung tích xi-lanh</span>
+                            </div>
+                            <div class="xe__wrap">
+                                <div class="xe__wrap-item">
+                                    <label for="175cc" class="xe__wrap-labbel">
+                                        <input type="checkbox" class="checkbox" id="175cc">
+                                        Dưới 175cc
+                                    </label>
+                                </div>
+                                <div class="xe__wrap-item">
+                                    <label for="350cc" class="xe__wrap-labbel">
+                                        <input type="checkbox" class="checkbox" id="350cc">
+                                        175cc - 350cc
+                                    </label>
+                                </div>
+                                <div class="xe__wrap-item">
+                                    <label for="700cc" class="xe__wrap-labbel">
+                                        <input type="checkbox" class="checkbox" id="700cc">
+                                        350cc - 700cc
+                                    </label>
+                                </div>
+                                <div class="xe__wrap-item">
+                                    <label for="1000cc" class="xe__wrap-labbel">
+                                        <input type="checkbox" class="checkbox" id="1000cc">
+                                        700cc - 1000cc
+                                    </label>
+                                </div>
+                            </div>    
                             <!-- Price -->
                             <div class="xe__label">
                             <span class="xe__label-text">Mức giá</span>
                             </div>
                             <div class="xe__wrap">
                                 <div class="xe__wrap-item">
-                                    <label for="20m" class="xe__wrap-labbel">
-                                        <input type="checkbox" class="checkbox" id="20m">
-                                        0 - 20.000.000
+                                    <label for="50m" class="xe__wrap-labbel">
+                                        <input type="checkbox" class="checkbox" id="50m">
+                                        0 - 50.000.000
                                     </label>
                                 </div>
                                 <div class="xe__wrap-item">
-                                    <label for="30-40m" class="xe__wrap-labbel">
-                                        <input type="checkbox" class="checkbox" id="30-40m">
-                                        30.000.000 - 40.000.000
+                                    <label for="80m" class="xe__wrap-labbel">
+                                        <input type="checkbox" class="checkbox" id="80m">
+                                        50.000.000 - 80.000.000
                                     </label>
                                 </div>
                                 <div class="xe__wrap-item">
-                                    <label for="40-50m" class="xe__wrap-labbel">
-                                        <input type="checkbox" class="checkbox" id="40-50m">
-                                        40.000.000 - 50.000.000
+                                    <label for="120m" class="xe__wrap-labbel">
+                                        <input type="checkbox" class="checkbox" id="120m">
+                                        80.000.000 - 120.000.000
                                     </label>
                                 </div>
                                 <div class="xe__wrap-item">
-                                    <label for="50-70m" class="xe__wrap-labbel">
-                                        <input type="checkbox" class="checkbox" id="50-70m">
-                                        50.000.000 - 70.000.000
+                                    <label for="15m" class="xe__wrap-labbel">
+                                        <input type="checkbox" class="checkbox" id="150m">
+                                        120.000.000 - 150.000.000
                                     </label>
                                 </div>
                                 <div class="xe__wrap-item">
-                                    <label for="70-100m" class="xe__wrap-labbel">
-                                        <input type="checkbox" class="checkbox" id="70-100m">
-                                        70.000.000 - 100.000.000
-                                    </label>
-                                </div>
-                                <div class="xe__wrap-item">
-                                    <label for="100m" class="xe__wrap-labbel">
-                                        <input type="checkbox" class="checkbox" id="100m">
-                                        > 100.000.000
+                                    <label for=">150m" class="xe__wrap-labbel">
+                                        <input type="checkbox" class="checkbox" id=">150m">
+                                        > 150.000.000
                                     </label>
                                 </div>
                             </div>
@@ -217,7 +241,7 @@
                                     <label for="" class="product-label">Từ GPX Thái Lan</label>
                                     <div class="product-type">
                                         <span>Loại xe: </span>
-                                        <a href="xeso.html" class="product-type__link">xe số</a>
+                                        <a href="xecon.html" class="product-type__link">xe côn tay</a>
                                     </div>
                                 </div>
                             </div>
@@ -287,6 +311,5 @@
     });
         </script>
     </div>
-
 </body>
 </html>
