Cập nhật lại header

--- a/khuyenmai_hondaCivic.html
+++ b/khuyenmai_hondaCivic.html
@@ -31,13 +31,13 @@
 
                                         <ul class="header__navbar-type">
                                             <li class="header__navbar-motobike-item">
-                                                <a href="">Xe côn tay</a>
+                                                <a href="xecon.html">Xe côn tay</a>
                                             </li>
                                             <li class="header__navbar-motobike-item">
                                                 <a href="xeso.html">Xe số</a>
                                             </li>
                                             <li class="header__navbar-motobike-item">
-                                                <a href="">Xe tay ga</a>
+                                                <a href="xetayga.html">Xe tay ga</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -50,28 +50,16 @@
 
                                         <ul class="header__navbar-type">
                                             <li class="header__navbar-car-item">
-                                                <a href="">Xe du lịch</a>
+                                                <a href="xedulich.html">Xe du lịch</a>
                                             </li>
                                             <li class="header__navbar-car-item">
-                                                <a href="">Xe thương mại</a>
+                                                <a href="xethuongmai.html">Xe thương mại</a>
                                             </li>
                                             <li class="header__navbar-car-item">
-                                                <a href="">Xe địa hình</a>
+                                                <a href="xediahinh.html">Xe địa hình</a>
                                             </li>
                                         </ul>
                                     </div>
-                                </li>
-                                <li class="header__navbar-item header__navbar-price">
-                                    Bảng giá
-                                    <i class="header__navbar-icon ti-angle-down"></i>
-                                        <ul class="header__navbar-price-list">
-                                            <li class="header__navbar-price-item">
-                                                <a href="">Xe du lịch</a>
-                                            </li>
-                                            <li class="header__navbar-price-item">
-                                                <a href="">Xe thương mại</a>
-                                            </li>
-                                        </ul>
                                 </li>
                                 <li class="header__navbar-item">
                                     <a href="daily.html" class="header__navbar-agency">Đại lý</a>
@@ -113,8 +101,7 @@
                     </div>
                     
                 </div>
-        </div>
-
+            </div>
         <!-- Container -->
         <div class="container container_khuyenmai">
             <div class="khuyenmai_hondaCivic-container-main-background" style="background-image: url(./assets/img/khuyenmai-hondCivic_main-background.jpg);"></div>
