--- a/xedulich.html
+++ b/xedulich.html
@@ -13,7 +13,7 @@
     <div class="main">
         <!-- Header -->
         <div class="header">
-                <div class="header__navbar">
+            <div class="header__navbar">
                     <div class="grid">
                         <div class="header__navbar-logo">
                             <a href="index.html">
@@ -85,23 +85,22 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li class="header__navbar-seach ">
-                                    <input type="checkbox" id="searchToggle" hidden>
-
-                                    <label for="searchToggle" class="search-icon-label">
-                                        <i class="ti-search"></i> 
-                                    </label>
+                                <li class="header__navbar-seach">
+                                    <div for="" class="search-icon">
+                                        <i class="ti-search"></i>
+                                    </div>
 
                                     <div class="search-box ">
                                         <input type="text" id="searchInput" placeholder="Tìm kiếm...">
+                                        <i class="ti-close search-close-icon"></i>
                                     </div>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     
-                </div>
             </div>
+        </div>
 
         <!-- Container -->
         <div class="container">
@@ -268,5 +267,33 @@
     });
         </script>
     </div>
+
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+        const goToHeaderButton = document.querySelector('.go-to-header');
+
+        // Hiển thị/ẩn nút khi cuộn trang
+        window.addEventListener('scroll', function() {
+            // Nếu người dùng cuộn xuống đủ 200px (hoặc giá trị bạn muốn)
+            if (window.pageYOffset > 260) {
+                goToHeaderButton.classList.add('show');
+            } else {
+                goToHeaderButton.classList.remove('show');
+            }
+        });
+
+        // Xử lý sự kiện khi nhấp vào nút
+        goToHeaderButton.addEventListener('click', function() {
+            // Cuộn lên đầu trang với hiệu ứng mượt mà
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth' // Cuộn mượt
+            });
+        });
+    });
+        </script>
+    
+    <script src="./assets/js/main.js"></script>
+
 </body>
 </html>
