--- a/xedulich.html
+++ b/xedulich.html
@@ -175,9 +175,9 @@
                 <div class="grid__row">
                     <div class="grid__column-3">
                         <select name="" class="xe__sorting-select">
-                            <option value="">Sắp xếp theo giá</option>
-                            <option value="">Giá từ thấp đến cao</option>
-                            <option value="">Giá từ cao đến thấp</option>
+                            <option value="default">Sắp xếp theo giá</option>
+                            <option value="low-to-high">Giá từ thấp đến cao</option>
+                            <option value="high-to-low">Giá từ cao đến thấp</option>
                         </select>
                         <div class="xe__label">
                             <span class="xe__label-text">Thương hiệu</span>
@@ -285,9 +285,9 @@
                         <div class="mobile-container">
                             <i class="ti-close filter-close-icon"></i>
                             <select name="" class="xe__sorting-select">
-                                <option value="">Sắp xếp theo giá</option>
-                                <option value="">Giá từ thấp đến cao</option>
-                                <option value="">Giá từ cao đến thấp</option>
+                                <option value="default">Sắp xếp theo giá</option>
+                                <option value="low-to-high">Giá từ thấp đến cao</option>
+                                <option value="high-to-low">Giá từ cao đến thấp</option>
                             </select>
                             <div class="xe__label">
                                 <span class="xe__label-text">Thương hiệu</span>
