--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
         </div>
 
          <!-- Advertisement -->
-         <!-- <div class="advertisement">
+         <div class="advertisement">
             <div class="ad__overplay"></div>
             <div class="ad__body">
                 <h4 class="ad__header">Đăng ký tư vấn</h4>
@@ -464,7 +464,7 @@
                 </div>
                 <i class="ti-close ad-close-icon"></i>
             </div>
-         </div> -->
+         </div>
 
 
     </div>
